# Make-Credit-Visable

./: .gitignore  Agent.md  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  scorecard.yaml
docs/: credit-risk-design-cn.md  project-overview-proposal-v2.md  project-overview-proposal-v3.md  project-overview-proposal-v4.md  project-overview-proposal-v5.md  project-overview-proposal.md  project-references.md
notebooks/: 00_colab_setup.ipynb  01_eda.ipynb  02_preprocessing.ipynb  03_modeling_baseline.ipynb  04_modeling_advanced.ipynb  05_xai_fairness.ipynb  06_scorecard_cutoff.ipynb
src/credit_visable/: __init__.py  config.py
src/credit_visable/data/: __init__.py  home_credit_bootstrap.py  load_data.py  memory_utils.py
src/credit_visable/explainability/: __init__.py  shap_analysis.py
src/credit_visable/features/: __init__.py  application_features.py  feature_sets.py  iv_woe.py  preprocess.py  review.py
src/credit_visable/governance/: __init__.py  fairness.py  monitoring.py
src/credit_visable/modeling/: __init__.py  evaluate.py  train_baseline.py  train_tree_models.py
src/credit_visable/reporting/: __init__.py  figure_repair.py  phase1_phase2_docx_report.py  phase5_docx_report.py  (+1 more)
tests/: test_explainability.py  test_fairness.py  test_feature_sets.py  test_figure_repair.py  test_home_credit_bootstrap.py  test_imports.py  test_iv_woe.py  test_load_data.py  test_modeling.py  test_notebook_report_text.py  test_paths.py  test_phase1_phase2_docx_report.py  test_phase5_docx_report.py  test_phase6_docx_report.py  test_preprocess.py  test_scoring.py
(+10 files in other folders)
